[package]
name = "tcp2quic"
version = "0.2.2"
authors = ["zephyr <i@zephyr.moe>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcgen = "0.14"
tokio = {version = "1.40", features = ["rt", "net", "io-util", "macros", "rt-multi-thread"]}
quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
webpki-roots = "0.26"
